Finish edit P1C3 case statement concept.

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
@@ -24,8 +24,8 @@ export const sliderImagesCaseStatement = [
     altText: "",
     tipStart: 1,
     tips: [
-      "Lines 1-4 get the user input ('C'), and store it in the variable 'language' on the stack",
-      "The program counter is incremented to line 5, ready to run the 'switch' statement."
+      "Lines 1 - 4 get the user's input (in this case we'll say the user entered 'C'), and stores it in the variable 'language' on the stack.",
+      "The program counter is incremented to 5, ready to run the 'switch' statement."
     ]
   },
   {
@@ -33,8 +33,7 @@ export const sliderImagesCaseStatement = [
     altText: "On line 5, the switch statement asks the computer to compare the value in the variable 'language' ('C'), to the value of all the case statements in it's scope (which is defined by the opening and closing braces of the switch statement) until a match is found. It increments the program counter to point to the first case statement on line 7.",
     tipStart: 2,
     tips: [
-      "On line 5, the switch statement start to compare the value in the variable 'language' ('C'), to the value of all the cases until a match is found",
-      "This will remember 'C' and compare it against the constant in each case"
+      "On line 5, the switch statement starts to compare the value in the variable 'language' to the value of all the cases until a match is found.",
     ]
   },
   {
@@ -42,9 +41,9 @@ export const sliderImagesCaseStatement = [
     altText: "Line 7 encounters the first case statement, and compares the value of 'language' ('C') to the value of the case statement ('C#'). The comparison is false ('C' != 'C#'). So the program counter jumps to the next 'case' statement (line 10).",
     tipStart: 3,
     tips: [
-      "The first case is on line 7",
-      "This compares the loaded value ('C') to the value of the case ('C#')",
-      "The comparison is <span class='booleanFalse'>false</span> ('C' != 'C#'). So the program counter jumps to the next case (line 10)."
+      "The first case is on line 7.",
+      "This compares the loaded value ('C') to the value of the case ('C#').",
+      "The comparison is <span class='booleanFalse'>false</span> ('C' != 'C#'), so the program counter jumps to the next case (line 10)."
     ]
   },
   {
@@ -52,9 +51,9 @@ export const sliderImagesCaseStatement = [
     altText: "On line 10 the comparison is 'true' ('C' == 'C'). The program counter then increments to line 11.",
     tipStart: 4,
     tips: [
-      "On line 10 the comparison is <span class='booleanTrue'>true</span> ('C' == 'C')",
-      "The sequence starts running here",
-      "The program counter then increments to line 11"
+      "On line 10 the comparison is <span class='booleanTrue'>true</span> ('C' == 'C').",
+      "The sequence starts running here.",
+      "The program counter then increments to line 11."
     ]
   },
   {
@@ -62,10 +61,10 @@ export const sliderImagesCaseStatement = [
     altText: "Notice that the case statement on line 11, lies directly below the case statement on line 10. When case statements are grouped together like this, as soon as any 'case' in the group evaluates to 'true', the remaining 'case' statements in the group are skipped to execute the code associated with this group of case statements. The program counter therefore increments to line 12 ",
     tipStart: 5,
     tips: [
-      "Notice that the case statement on line 11, lies directly below the case statement on line 10",
-      "This drops through the case, meaning that the sequence continues.",
-      "You can grouped together like this, as soon as any 'case' in the group evaluates to 'true', the the code associated with this group is run.",
-      "The program counter therefore increments to line 12"
+      "Line 11 is another case. Because the switch statement has already matched a case no comparison is made.",
+      "The computer drops through the case, meaning that the sequence continues.",
+      "You can group cases like this - as soon as any case in the group evaluates to 'true', the code associated with the group is run.",
+      "The program counter therefore increments to line 12."
     ]
   },
   {
@@ -73,8 +72,8 @@ export const sliderImagesCaseStatement = [
     altText: "At line 12 we output the message to the terminal. The program counter is incremented to line 13.",
     tipStart: 6,
     tips: [
-      "At line 12 we output the message to the terminal",
-      "The program counter is incremented to line 13"
+      "At line 12 we output a message to the terminal.",
+      "The program counter is incremented to line 13."
     ]
   },
   {
@@ -82,9 +81,9 @@ export const sliderImagesCaseStatement = [
     altText: "At line 13 we encounter a 'break' statement which terminates the code associated with the 'true' case block. The 'break statement will jump to the end of the 'switch' statement (line 16), and the program counter is incremented to point to the next line of code (line 17)",
     tipStart: 7,
     tips: [
-      "The 'break' statement on line 13 jumps to the end of the case statement",
-      "This sets the program counter to run line 17 - the first instruction after the case statement",
-      "Without a break, control would flow into the 'default' code that follows"
+      "The 'break' statement on line 13 jumps to the end of the case statement.",
+      "This sets the program counter to run line 17 - the first instruction after the case statement.",
+      "Without a break, control would flow into the 'default' code that follows."
     ]
   },
   {
@@ -92,8 +91,8 @@ export const sliderImagesCaseStatement = [
     altText: "At line 17 the message is output to the terminal. The program counter increases, and the program ends.",
     tipStart: 8,
     tips: [
-      "At line 17 the message is output to the terminal",
-      "The program counter increases, and the program ends"
+      "At line 17 a message is output to the terminal.",
+      "The program counter increases, and the program ends."
     ]
   },
   {
@@ -101,7 +100,7 @@ export const sliderImagesCaseStatement = [
     altText: "This time the user has input 'Fortran'",
     tipStart: 9,
     tips: [
-      "This time the user has input 'Fortran'"
+      "Let's rewind back to line 4, this time pretending that the user has input 'Fortran'."
     ]
   },
   {
@@ -109,8 +108,8 @@ export const sliderImagesCaseStatement = [
     altText: "Now the switch comparison (line 5) to the case statement values (lines 7, 10 and 11) all evaluate to 'false'. So the program is incremented to line 14 (the 'default' statement)",
     tipStart: 10,
     tips: [
-      "Now the switch comparison (line 5) to the case statement values (lines 7, 10 and 11) all evaluate to <span class='booleanFalse'>false</span>",
-      "So the program is set to line 14 (the 'default' statement)"
+      "Now the switch comparison (line 5) to the case statement values (lines 7, 10 and 11) all evaluate to <span class='booleanFalse'>false</span>.",
+      "So, the program counter is set to line 14, the 'default' case."
     ]
   },
   {
@@ -118,10 +117,9 @@ export const sliderImagesCaseStatement = [
     altText: "Lines 14 and 15 executes the block of code associated with 'default' and prints a message to the screen. The switch statement ends when it encounters the closing brace. The program counter is incremented to line 17, and the final message is output to the terminal. The program counter increments a final time to end.",
     tipStart: 11,
     tips: [
-      "The default branch runs as none of the other cases match",
-      "Lines 14 and 15 executes the block of code associated with 'default' and prints a message to the screen",
-      "The switch statement ends when it encounters the closing brace",
-      "The program counter is incremented to line 17, and the final message is output to the terminal"
+      "Lines 14 and 15 executes the block of code associated with the default case, printing a message to the terminal.",
+      "The switch statement ends when it encounters the closing brace on line 16.",
+      "The program counter is incremented to line 17, and the final message is output to the terminal."
     ]
   }
 ];
@@ -206,15 +204,13 @@ Use the following images to see how this code runs.
 <MySwiper client:only height="" images={sliderImagesCaseStatement}></MySwiper>
 
 :::tip[Attention]
-
-Grouping cases as shown here is okay, but to help avoid unexpected fall through, the C# language will give you an error if you do not have a break statement if you have code within a branch. You can jump to another case at the end of any given case by using the `goto case` and providing the constant you want to jump to or `goto default`.
-
+Grouping cases as shown here is okay, but to help avoid unexpected fall through the C# language will give you an error if you have some code in a branch without a break statement. You can jump to another case at the end of any given case by using `goto case` and specifying the case you want to jump to, or `goto default` to jump to the default case.
 :::
 
 :::note[Summary]
 
 - The case statement is a kind of **instruction**. It allows you to command the computer to select a path based on the value of an expression.
-- Each path within the case statement has a value. When the computer executes the case statement's expression is compared against each path's value to determine which path to take.
+- Each path within the case statement has a value. The computer compares the case statement's expression to each path's value to determine which path to take.
 - Older languages limit the case statement to work only with integers and individual characters.
 - The case statement has one entry point, multiple paths, and then one exit point.
 
