Reorganise slider files into sub-folders for easier export

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
@@ -5,34 +5,34 @@ sidebar:
 ---
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
 
-import whileLoopSlide01 from './images/control-flow-statements-in-depth/control-flow-while-loop-01.png';
-import whileLoopSlide02 from './images/control-flow-statements-in-depth/control-flow-while-loop-02.png';
-import whileLoopSlide03 from './images/control-flow-statements-in-depth/control-flow-while-loop-03.png';
-import whileLoopSlide04 from './images/control-flow-statements-in-depth/control-flow-while-loop-04.png';
-import whileLoopSlide05 from './images/control-flow-statements-in-depth/control-flow-while-loop-05.png';
-import whileLoopSlide06 from './images/control-flow-statements-in-depth/control-flow-while-loop-06.png';
-import whileLoopSlide07 from './images/control-flow-statements-in-depth/control-flow-while-loop-07.png';
-import whileLoopSlide08 from './images/control-flow-statements-in-depth/control-flow-while-loop-08.png';
-import whileLoopSlide09 from './images/control-flow-statements-in-depth/control-flow-while-loop-09.png';
-import whileLoopSlide10 from './images/control-flow-statements-in-depth/control-flow-while-loop-10.png';
-import whileLoopSlide11 from './images/control-flow-statements-in-depth/control-flow-while-loop-11.png';
+import whileLoopSlide01 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide1.png';
+import whileLoopSlide02 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide2.png';
+import whileLoopSlide03 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide3.png';
+import whileLoopSlide04 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide4.png';
+import whileLoopSlide05 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide5.png';
+import whileLoopSlide06 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide6.png';
+import whileLoopSlide07 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide7.png';
+import whileLoopSlide08 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide8.png';
+import whileLoopSlide09 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide9.png';
+import whileLoopSlide10 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide10.png';
+import whileLoopSlide11 from './images/control-flow-statements-in-depth/control-flow-while-loop/Slide11.png';
 
-import whileLoopSplashkitImg01 from './images/slider-while-splashkit/Slide1.png';
-import whileLoopSplashkitImg02 from './images/slider-while-splashkit/Slide2.png';
-import whileLoopSplashkitImg03 from './images/slider-while-splashkit/Slide3.png';
-import whileLoopSplashkitImg04 from './images/slider-while-splashkit/Slide4.png';
-import whileLoopSplashkitImg05 from './images/slider-while-splashkit/Slide5.png';
-import whileLoopSplashkitImg06 from './images/slider-while-splashkit/Slide6.png';
-import whileLoopSplashkitImg07 from './images/slider-while-splashkit/Slide7.png';
-import whileLoopSplashkitImg08 from './images/slider-while-splashkit/Slide8.png';
-import whileLoopSplashkitImg09 from './images/slider-while-splashkit/Slide9.png';
-import whileLoopSplashkitImg10 from './images/slider-while-splashkit/Slide10.png';
-import whileLoopSplashkitImg11 from './images/slider-while-splashkit/Slide11.png';
-import whileLoopSplashkitImg12 from './images/slider-while-splashkit/Slide12.png';
-import whileLoopSplashkitImg13 from './images/slider-while-splashkit/Slide13.png';
-import whileLoopSplashkitImg14 from './images/slider-while-splashkit/Slide14.png';
-import whileLoopSplashkitImg15 from './images/slider-while-splashkit/Slide15.png';
-import whileLoopSplashkitImg16 from './images/slider-while-splashkit/Slide16.png';
+import whileLoopSplashkitImg01 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide1.png';
+import whileLoopSplashkitImg02 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide2.png';
+import whileLoopSplashkitImg03 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide3.png';
+import whileLoopSplashkitImg04 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide4.png';
+import whileLoopSplashkitImg05 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide5.png';
+import whileLoopSplashkitImg06 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide6.png';
+import whileLoopSplashkitImg07 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide7.png';
+import whileLoopSplashkitImg08 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide8.png';
+import whileLoopSplashkitImg09 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide9.png';
+import whileLoopSplashkitImg10 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide10.png';
+import whileLoopSplashkitImg11 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide11.png';
+import whileLoopSplashkitImg12 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide12.png';
+import whileLoopSplashkitImg13 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide13.png';
+import whileLoopSplashkitImg14 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide14.png';
+import whileLoopSplashkitImg15 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide15.png';
+import whileLoopSplashkitImg16 from './images/control-flow-statements-in-depth/slider-while-splashkit/Slide16.png';
 
 export const sliderImagesWhileLoop = [
   {
@@ -319,27 +319,25 @@ Remember everything is always in sequence. The word "while" seems to indicate th
 ## In C#
 
 :::tip[Syntax]
-
-In C#, as with most languages, the while loop starts with the `while` keyword followed by the condition within parenthesis. The statement that is repeated follows this, which in almost all cases will be a [compound statement](../02-compound-statement).
+The following diagram shows the C# syntax for a while loop.
 
 ![While loop syntax.](./images/while-loop.png)
-
 :::
 
- In C# we can use a [compound statement](../02-0-compound-statement) to have the while loop repeat a block of code.
+In C# the while loop starts with the `while` keyword followed by the condition within parenthesis. The statement that is repeated follows this, which in almost all cases will be a [compound statement](../02-0-compound-statement).
 
+## How does `while` work?
 
-## How does while work?
+Let's work through two examples: a while loop for a terminal-based program and one for a graphical application using SplashKit.
 
-Let's work through two examples, a while loop for a terminal-based program and one for a graphical application using SplashKit.
+### Counting with `while`
 
-### Counting with while
+The following code provides a simple example of how to work with a while loop. In this program we want to output a count from 0 up to a target the user provides. To achieve this, we will need a variable for the target which will store the value the user enters. We will also need a variable to keep track of our count, indicating which value we are up to.
 
-The following code provides a simple example of how to work with the while loop. In this program we want to output a count from 0 up to a target the user provides. To achieve this, we will need a variable for the target which will store the value the user wants us to count to. We will also need a variable to keep track of our count, indicating which value we are up to. These steps are coded into the program below.
-
+These steps are coded into the program below.
 The user is asked to enter a number, which we store in the `target` variable, and we create a second variable (`i`) that we use to count the number of times the loop runs. Before the loop, `i` is set to 0 as we generally count from 0 in our code.
 
-The while loop run **while** `i` is less than the `target`. Within the loop, we use the `i++` [assignment statement](../../../1-sequence-and-data/1-concepts/08-assignment-statement) to increase the value of `i`. This means that the value of `i` will eventually be larger than or equal to the `target`, thereby ensuring the loop will end.
+The while loop runs **while** `i` is less than the `target`. Within the loop, we use the `i++` [assignment statement](../../../1-sequence-and-data/1-concepts/08-assignment-statement) to increase the value of `i`. This means that the value of `i` will eventually be larger than or equal to the `target`, thereby ensuring the loop will end.
 
 ```csharp
 using static System.Console;
@@ -354,15 +352,13 @@ int i =  0;
 
 while (i < target)
 {
-  WriteLine(i);
-  i++;
+    WriteLine(i);
+    i++;
 }
 ```
 
 :::tip[Why i?]
-
-You will very often need to create working variables, like `i`, to help keep track of things for you. In this case, i is keeping track of the number of times the loop is run. When we have a simple integer value to track a count of something, we generally call this `i`. It comes from Fortran, an early language, where integer variables started with `i`. Developers then generally just used `i` if the variable had a simple counting purpose - it saved time thinking about what to call the variable and was easy to type. It stuck, and is now a common practice.
-
+You will very often need to create working variables, like `i`, to help keep track of things for you. In this case, `i` is keeping track of the number of times the loop is run. When we have a simple integer value to track a count of something, we generally call this `i`. It comes from Fortran, an early language, where integer variables started with `i`. Developers then generally just used `i` if the variable had a simple counting purpose - it saved time thinking about what to call the variable and was easy to type. It stuck, and is now a common practice.
 :::
 
 Use the following images to see how this runs.
@@ -370,9 +366,7 @@ Use the following images to see how this runs.
 <MySwiper client:only height="" images={sliderImagesWhileLoop}></MySwiper>
 
 :::tip[Attention]
-
 Notice how the loop is achieved through a few simple jump statements.
-
 :::
 
 ### Keeping graphical programs running
