Start edit on while loop slider.

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
@@ -37,11 +37,11 @@ import whileLoopSplashkitImg16 from './images/control-flow-statements-in-depth/s
 export const sliderImagesWhileLoop = [
   {
     src: whileLoopSlide01.src,
-    altText: "Lines 1-5 get the user input (10), and store it in the variable 'target' on the stack. The program counter is incremented to line 6.",
+    altText: "Lines 1 - 5 get the user input (in this case we'll say the user entered 10), and store it in the variable 'target' on the stack. The program counter is incremented to line 6.",
     tipStart: 1,
     tips: [
-      "Lines 1-5 get the user input (<code>10</code>), and store it in the variable 'target' on the stack",
-      "The program counter is incremented to line 6"
+      "Lines 1 - 5 get the user input (in this case we'll say the user entered <code>10</code>), and store it in the variable 'target' on the stack.",
+      "The program counter is incremented to line 6."
     ]
   },
   {
